added gemini API and updated dashboard UI
